my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBADFAIL_dml12/T_EBADFAIL_dml12-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EBADFAIL_DML12_STRUCT_H
#define T_EBADFAIL_DML12_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EBADFAIL_dml12(void);


#endif /* not T_EBADFAIL_DML12_STRUCT_H */
